Fix members dialog being too small on mobile

--- a/src/styles/components/_dialog.sass
+++ b/src/styles/components/_dialog.sass
@@ -238,7 +238,8 @@
 			max-height: 400px
 			.dialog-header
 				padding-left: 0
-
+		.dialog-content
+			max-height: 60vh
 		.dialog-member-list
 			@include display(flex)
 			@include flex-wrap(wrap)
